; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_object.c_kxld_object_process_relocations.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_kxld_object.c_kxld_object_process_relocations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64, i32 }

@KERN_FAILURE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@finish = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kxld_object_process_relocations(%struct.TYPE_8__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %6, i32* %5, align 4
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 1
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @kxld_relocator_set_vtables(i32* %8, i32* %9)
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load i32, i32* @FALSE, align 4
  %17 = load i32, i32* @finish, align 4
  %18 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %18, i32* %5, align 4
  %19 = call i32 @require_action(i32 %16, i32 %17, i32 %18)
  br label %25

20:                                               ; preds = %2
  %21 = load i32, i32* @FALSE, align 4
  %22 = load i32, i32* @finish, align 4
  %23 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %23, i32* %5, align 4
  %24 = call i32 @require_action(i32 %21, i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %20, %15
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %27 = call i32 @populate_kmod_info(%struct.TYPE_8__* %26)
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* @finish, align 4
  %30 = call i32 @require_noerr(i32 %28, i32 %29)
  %31 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %25
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @kxld_relocator_set_vtables(i32*, i32*) #1

declare dso_local i32 @require_action(i32, i32, i32) #1

declare dso_local i32 @populate_kmod_info(%struct.TYPE_8__*) #1

declare dso_local i32 @require_noerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
